Fixed spacing

--- a/src/styling/profile.scss
+++ b/src/styling/profile.scss
@@ -222,10 +222,10 @@ $text-color: #242526;
     }
 
     &-nav{
+        // display: inline-block;
+        // position: relative;
+        // top: 0;
+        // width: 100%;
         // border: 1px solid red;
-        display: inline-block;
-        position: relative;
-        top: 0;
-        width: 100%;
     }
 }
